--- a/task3/second_task.html
+++ b/task3/second_task.html
@@ -12,13 +12,13 @@
 var number = 12345;
 
 // 
-Converting a number to a string
+//   Converting a number to a string
 var numberString = number.toString();
 
-// Використання методу replace для додавання пробілів між цифрами
+// Using the replace method to add spaces between numbers
 var resultString = numberString.replace(/(\d)(?=\d)/g, '$1 ');
 
-// Виведення результуючого рядка
+// Result
 console.log(resultString);
 
 </script>
