--- a/task5/index.html
+++ b/task5/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        // Частина №1
+        // Part 1
 const birthYear = prompt("Введіть рік вашого народження:");
 const city = prompt("Введіть місто, в якому ви живете:");
 const favoriteSport = prompt("Введіть ваш улюблений вид спорту:");
@@ -29,7 +29,7 @@ if (capitals[city]) {
     message += `Ти живеш у місті ${city}`;
 }
 
-// Частина №2
+// Part 2 
 const sportsChampions = {
     "футбол": "Пеле",
     "баскетбол": "Майкл Джордан",
